# hello_cmake

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  hello.c  run.sh
